updated canvas and dashbaords (work local and clickhouse)

--- a/viz_rill/canvases/aws_cost_line_item_canvas.yml
+++ b/viz_rill/canvases/aws_cost_line_item_canvas.yml
@@ -1,157 +1,319 @@
 type: canvas
 display_name: Dynamic Tag Insights
-defaults: { time_range: P1M }
+defaults: { time_range: P12M }
 
 rows:
+
+  
+  
+  
+  
   - items:
       - kpi_grid:
-          measures:
-            - total_unblended_cost
+          measures: [ total_unblended_cost ]
           metrics_view: aws_cost_metrics
-          dimension_filters: line_item_product_code IN ('AmazonS3')
-          title: Line Item Product Code — AmazonS3
-        width: 12
-    height: 160px
-  - items:
-      - leaderboard:
-          dimensions:
-            - line_item_blended_cost
-          measures:
-            - total_unblended_cost
-          num_rows: 15
-          metrics_view: aws_cost_metrics
-          title: Line Item Blended Cost
-        width: 12
-    height: 40px
-  - items:
-      - leaderboard:
-          dimensions:
-            - line_item_unblended_cost
-          measures:
-            - total_unblended_cost
-          num_rows: 15
-          metrics_view: aws_cost_metrics
-          title: Line Item Unblended Cost
-        width: 12
-    height: 40px
-  - items:
-      - leaderboard:
-          dimensions:
-            - line_item_usage_amount
-          measures:
-            - total_unblended_cost
-          num_rows: 15
-          metrics_view: aws_cost_metrics
-          title: Line Item Usage Amount
-        width: 12
-  - items:
-      - bar_chart:
-          x:
-            field: line_item_operation
+          dimension_filters: line_item_product_code IN ('AmazonRDS')
+          title: "Line Item Product Code — AmazonRDS"
+        width: 4
+
+      - pie_chart:
+          color:
+            field: line_item_product_code
             type: nominal
+            innerRadius: 50
             limit: 10
+          measure:
+            field: total_unblended_cost
+            type: quantitative
+          metrics_view: aws_cost_metrics
+          dimension_filters: line_item_product_code NIN ('AmazonRDS')
+          title: "Line Item Product Code — Other"
+        width: 8
+    height: 280px
+
+  
+  
+  
+  
+
+  
+  
+  
+  
+  - items:
+      - kpi_grid:
+          measures: [ total_unblended_cost ]
+          metrics_view: aws_cost_metrics
+          dimension_filters: line_item_operation IN ('CreateDBInstance:0005')
+          title: "Line Item Operation — CreateDBInstance:0005"
+        width: 4
+
+      - pie_chart:
           color:
             field: line_item_operation
             type: nominal
+            innerRadius: 50
             limit: 10
           measure:
             field: total_unblended_cost
             type: quantitative
           metrics_view: aws_cost_metrics
-          title: Line Item Operation
-        width: 6
+          dimension_filters: line_item_operation NIN ('CreateDBInstance:0005')
+          title: "Line Item Operation — Other"
+        width: 8
     height: 280px
-  - items:
-      - bar_chart:
-          x:
-            field: line_item_line_item_description
-            type: nominal
-            limit: 10
-          color:
-            field: line_item_line_item_description
-            type: nominal
-            limit: 10
-          measure:
-            field: total_unblended_cost
-            type: quantitative
-          metrics_view: aws_cost_metrics
-          title: Line Item Line Item Description
-        width: 12
-    height: 280px
-  - items:
-      - bar_chart:
-          x:
-            field: line_item_blended_rate
-            type: nominal
-            limit: 10
-          color:
-            field: line_item_blended_rate
-            type: nominal
-            limit: 10
-          measure:
-            field: total_unblended_cost
-            type: quantitative
-          metrics_view: aws_cost_metrics
-          title: Line Item Blended Rate
-        width: 12
-    height: 280px
-  - items:
-      - bar_chart:
-          x:
-            field: line_item_unblended_rate
-            type: nominal
-            limit: 10
-          color:
-            field: line_item_unblended_rate
-            type: nominal
-            limit: 10
-          measure:
-            field: total_unblended_cost
-            type: quantitative
-          metrics_view: aws_cost_metrics
-          title: Line Item Unblended Rate
-        width: 12
-    height: 280px
-  - items:
-      - bar_chart:
-          x:
-            field: line_item_usage_type
-            type: nominal
-            limit: 10
-          color:
-            field: line_item_usage_type
-            type: nominal
-            limit: 10
-          measure:
-            field: total_unblended_cost
-            type: quantitative
-          metrics_view: aws_cost_metrics
-          title: Line Item Usage Type
-        width: 12
-    height: 280px
+
+  
+  
+  
+  
+
+  
+  
+  
+  
   - items:
       - leaderboard:
-          dimensions:
-            - line_item_usage_start_date
-          measures:
-            - total_unblended_cost
-          num_rows: 15
+          dimensions: [ line_item_normalization_factor ]
+          measures:   [ total_unblended_cost ]
+          num_rows:   15
           metrics_view: aws_cost_metrics
-          title: Line Item Usage Start Date
-        width: 12
-    height: 280px
-  - items:
-      - leaderboard:
-          dimensions:
-            - line_item_usage_end_date
-          measures:
-            - total_unblended_cost
-          num_rows: 15
-          metrics_view: aws_cost_metrics
-          title: Line Item Usage End Date
+          dimension_filters: line_item_normalization_factor IN ('0.0', '8.0', '4.0')
+          title: "Line Item Normalization Factor"
         width: 12
     height: 280px
 
-time_ranges: [ PT24H, P7D, P30D, P3M, P12M ]
+  
+  
+  
+  
+
+  
+  
+  
+  
+  - items:
+      - leaderboard:
+          dimensions: [ line_item_normalized_usage_amount ]
+          measures:   [ total_unblended_cost ]
+          num_rows:   10
+          metrics_view: aws_cost_metrics
+          dimension_filters: line_item_normalized_usage_amount IN ('0.0', '8.0')
+          title: "Line Item Normalized Usage Amount — Top"
+        width: 6
+
+      - pie_chart:
+          color:
+            field: line_item_normalized_usage_amount
+            type: nominal
+            innerRadius: 50
+            limit: 10
+          measure:
+            field: total_unblended_cost
+            type: quantitative
+          metrics_view: aws_cost_metrics
+          dimension_filters: line_item_normalized_usage_amount NIN ('0.0', '8.0')
+          title: "Line Item Normalized Usage Amount — Others"
+        width: 6
+    height: 280px
+
+  
+  
+  
+  
+
+  
+  
+  
+  
+  - items:
+      - bar_chart:
+          
+          x:
+            field: line_item_blended_rate
+            type: nominal
+            limit: 10
+          
+
+          
+          color:
+            field: line_item_blended_rate
+            type: nominal
+            
+            limit: 10
+          measure:
+            field: total_unblended_cost
+            type: quantitative
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Blended Rate"
+        width: 12
+    height: 280px
+  
+
+  
+  
+  
+  
+  - items:
+      - bar_chart:
+          
+          x:
+            field: line_item_unblended_rate
+            type: nominal
+            limit: 10
+          
+
+          
+          color:
+            field: line_item_unblended_rate
+            type: nominal
+            
+            limit: 10
+          measure:
+            field: total_unblended_cost
+            type: quantitative
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Unblended Rate"
+        width: 12
+    height: 280px
+  
+
+  
+  
+  
+  
+  - items:
+      - leaderboard:
+          
+
+          
+          dimensions: [ line_item_usage_type ]
+          measures:   [ total_unblended_cost ]
+          num_rows: 15
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Usage Type"
+        width: 12
+    height: 280px
+  
+
+  
+  
+  
+  
+  - items:
+      - leaderboard:
+          
+
+          
+          dimensions: [ line_item_line_item_description ]
+          measures:   [ total_unblended_cost ]
+          num_rows: 15
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Line Item Description"
+        width: 12
+    height: 280px
+  
+
+  
+  
+  
+  
+  - items:
+      - leaderboard:
+          
+
+          
+          dimensions: [ line_item_blended_cost ]
+          measures:   [ total_unblended_cost ]
+          num_rows: 15
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Blended Cost"
+        width: 12
+    height: 280px
+  
+
+  
+  
+  
+  
+  - items:
+      - leaderboard:
+          
+
+          
+          dimensions: [ line_item_unblended_cost ]
+          measures:   [ total_unblended_cost ]
+          num_rows: 15
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Unblended Cost"
+        width: 12
+    height: 280px
+  
+
+  
+  
+  
+  
+  - items:
+      - leaderboard:
+          
+
+          
+          dimensions: [ line_item_usage_amount ]
+          measures:   [ total_unblended_cost ]
+          num_rows: 15
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Usage Amount"
+        width: 12
+    height: 280px
+  
+
+  
+  
+  
+  
+  - items:
+      - leaderboard:
+          
+
+          
+          dimensions: [ line_item_usage_start_date ]
+          measures:   [ total_unblended_cost ]
+          num_rows: 15
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Usage Start Date"
+        width: 12
+    height: 280px
+  
+
+  
+  
+  
+  
+  - items:
+      - leaderboard:
+          
+
+          
+          dimensions: [ line_item_usage_end_date ]
+          measures:   [ total_unblended_cost ]
+          num_rows: 15
+          
+          metrics_view: aws_cost_metrics
+          title: "Line Item Usage End Date"
+        width: 12
+    height: 280px
+  
+
+
+time_ranges: [PT24H, P7D, P30D, P3M, P12M]
 filters: { enable: true }
 theme: theme
