Add Cloud Version of local version with ClickHouse and GH actions (#1)
* clickhouse addition

* update clickhouse

* delete

* update .env for rill

* clickhouse working

* update docs

* fix

* add normalization

* fix path

* normalize or not

* update scripts to work with ClickHouse and Local

* updated canvas and dashbaords (work local and clickhouse)

* update deployment

--- a/.dlt/secrets.toml.example
+++ b/.dlt/secrets.toml.example
@@ -17,3 +17,14 @@ token_uri = "https://oauth2.googleapis.com/token"
 [sources.stripe_analytics]
 stripe_secret_key = "sk_live_..."
 
+# ClickHouse Cloud credentials (for production deployment)
+[destination.clickhouse.credentials]
+host = "xxxxx.europe-west4.gcp.clickhouse.cloud"
+username = "default"
+password = "<your-clickhouse-password>"
+secure = 1
+
+# The `make init-clickhouse` will create the user and password - add the password here. See print
+#[destination.clickhouse.credentials]
+#username = 'dlt'
+#password = '<generated-password>'
