update ENV for clickhouse

--- a/viz_rill/.env.example
+++ b/viz_rill/.env.example
@@ -31,4 +31,4 @@ RILL_PROJECT_PATH=.
 # 2. Add ClickHouse connection string
 # connector.clickhouse.dsn=clickhouse://username:password@host:port/database?secure=true
 # Example:
-# connector.clickhouse.dsn=clickhouse://default:your-password@xxxxx.europe-west4.gcp.clickhouse.cloud:8443/default?secure=true
+# CONNECTOR_CLICKHOUSE_DSN=clickhouse://default:your-password@xxxxx.europe-west4.gcp.clickhouse.cloud:8443/default?secure=true
