--- a/.github/workflows/etl-pipeline.yml
+++ b/.github/workflows/etl-pipeline.yml
@@ -13,7 +13,7 @@ on:
         default: false
 
 jobs:
-  run-etl:
+  run-all-cloud:
     runs-on: ubuntu-latest
 
     steps:
@@ -116,17 +116,25 @@ jobs:
             ~/.local/share/dlt/**/*.log
           retention-days: 7
 
-      - name: Install Rill CLI (Direct Download Alternative)
+      - name: Install Rill CLI (Simplified Latest Download)
         run: |
-          # 1. Download the latest Linux AMD64 binary
-          curl -sSL https://install.rilldata.com/latest/linux-amd64/rill -o rill
-          # 2. Make it executable
+          # 1. Use the simple GitHub redirect URL for the latest asset
+          LATEST_URL="https://github.com/rilldata/rill/releases/latest/download/rill_linux_amd64.zip"
+          ASSET_NAME="rill_linux_amd64.zip"
+          
+          # 2. Download and unzip the archive
+          # -L flag is critical to follow the redirect from /latest/ to the actual tag URL
+          curl -sSL -L "$LATEST_URL" -o "$ASSET_NAME"
+          
+          # 3. Handle extraction and PATH setup
+          unzip "$ASSET_NAME"
           chmod +x rill
-          # 3. Move it to a directory that will be added to the PATH (e.g., ~/.local/bin)
-          mkdir -p ~/.local/bin
-          mv rill ~/.local/bin/rill
-          # 4. Add the local bin directory to the GITHUB_PATH
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          INSTALL_DIR="$HOME/.rill/bin"
+          mkdir -p "$INSTALL_DIR"
+          mv rill "$INSTALL_DIR"/rill
+          echo "$INSTALL_DIR" >> $GITHUB_PATH
+          
+          echo "Rill CLI successfully installed."
 
       - name: Configure Rill Cloud environment
         run: |
