--- a/.github/workflows/etl-pipeline.yml
+++ b/.github/workflows/etl-pipeline.yml
@@ -78,10 +78,9 @@ jobs:
         run: uv run python pipelines/stripe_pipeline.py
         continue-on-error: false
 
-        # TODO: Turn back on: turn off for testing
-      # - name: Anonymize data for public dashboards
-      #   run: uv run python scripts/anonymize_clickhouse.py
-      #   continue-on-error: false
+      - name: Anonymize data for public dashboards
+        run: uv run python scripts/anonymize_clickhouse.py
+        continue-on-error: false
 
       - name: Normalize AWS data (optional - for advanced dashboards)
         if: ${{ github.event.inputs.include_normalized == 'true' }}
@@ -117,49 +116,50 @@ jobs:
             ~/.local/share/dlt/**/*.log
           retention-days: 7
 
-      - name: Install Rill CLI (Simplified Latest Download)
-        run: |
-          # 1. Use the simple GitHub redirect URL for the latest asset
-          LATEST_URL="https://github.com/rilldata/rill/releases/latest/download/rill_linux_amd64.zip"
-          ASSET_NAME="rill_linux_amd64.zip"
+      # skip upload and deployment of new dashboards. As they don't change for now and can be done manually
+      # - name: Install Rill CLI (Simplified Latest Download)
+      #   run: |
+      #     # 1. Use the simple GitHub redirect URL for the latest asset
+      #     LATEST_URL="https://github.com/rilldata/rill/releases/latest/download/rill_linux_amd64.zip"
+      #     ASSET_NAME="rill_linux_amd64.zip"
           
-          # 2. Download and unzip the archive
-          # -L flag is critical to follow the redirect from /latest/ to the actual tag URL
-          curl -sSL -L "$LATEST_URL" -o "$ASSET_NAME"
+      #     # 2. Download and unzip the archive
+      #     # -L flag is critical to follow the redirect from /latest/ to the actual tag URL
+      #     curl -sSL -L "$LATEST_URL" -o "$ASSET_NAME"
           
-          # 3. Handle extraction and PATH setup
-          unzip -o "$ASSET_NAME"
-          chmod +x rill
-          INSTALL_DIR="$HOME/.rill/bin"
-          mkdir -p "$INSTALL_DIR"
-          mv rill "$INSTALL_DIR"/rill
-          echo "$INSTALL_DIR" >> $GITHUB_PATH
+      #     # 3. Handle extraction and PATH setup
+      #     unzip -o "$ASSET_NAME"
+      #     chmod +x rill
+      #     INSTALL_DIR="$HOME/.rill/bin"
+      #     mkdir -p "$INSTALL_DIR"
+      #     mv rill "$INSTALL_DIR"/rill
+      #     echo "$INSTALL_DIR" >> $GITHUB_PATH
           
-          echo "Rill CLI successfully installed."
+      #     echo "Rill CLI successfully installed."
 
-      - name: Configure Rill Cloud environment
-        run: |
-          cd viz_rill
-          cat > .env << 'EOF'
-          RILL_CONNECTOR=clickhouse
-          connector.clickhouse.dsn=clickhouse://${{ secrets.CLICKHOUSE_USERNAME }}:${{ secrets.CLICKHOUSE_PASSWORD }}@${{ secrets.CLICKHOUSE_HOST }}:8443/default?secure=true
-          EOF
+      # - name: Configure Rill Cloud environment
+      #   run: |
+      #     cd viz_rill
+      #     cat > .env << 'EOF'
+      #     RILL_CONNECTOR=clickhouse
+      #     connector.clickhouse.dsn=clickhouse://${{ secrets.CLICKHOUSE_USERNAME }}:${{ secrets.CLICKHOUSE_PASSWORD }}@${{ secrets.CLICKHOUSE_HOST }}:8443/default?secure=true
+      #     EOF
 
-      - name: Deploy to Rill Cloud
-        env:
-          RILL_API_TOKEN: ${{ secrets.RILL_API_TOKEN }}
-        run: |
-          cd viz_rill
-          rill deploy \
-            --org demo \
-            --path viz_rill \
-            --public \
-            --prod-branch main \
-            # --api-token ${{ secrets.RILL_API_TOKEN }}
+      # - name: Deploy to Rill Cloud
+      #   env:
+      #     RILL_API_TOKEN: ${{ secrets.RILL_API_TOKEN }}
+      #   run: |
+      #     cd viz_rill
+      #     rill deploy \
+      #       --org demo \
+      #       --path viz_rill \
+      #       --public \
+      #       --prod-branch main \
+      #       # --api-token ${{ secrets.RILL_API_TOKEN }}
 
       - name: Notify on success
         if: success()
         run: |
           echo "✅ ETL pipeline completed successfully"
           echo "Data loaded to ClickHouse at ${{ secrets.CLICKHOUSE_HOST }}"
-          echo "📊 Dashboards deployed to Rill Cloud: https://ui.rilldata.com/demo/viz_rill/"
+          # echo "📊 Dashboards deployed to Rill Cloud: https://ui.rilldata.com/demo/viz_rill/"
