--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 # dlt will use my already set ENV vars
 export SOURCES__FILESYSTEM__CREDENTIALS__AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID"
 export SOURCES__FILESYSTEM__CREDENTIALS__AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY"
+
+export COST_MULTIPLIER_MIN=20.0
+export COST_MULTIPLIER_MAX=50.0
+export DUPLICATE_ROWS=12
