--- a/viz_rill/canvases/aws_cost_overview_canvas.yml
+++ b/viz_rill/canvases/aws_cost_overview_canvas.yml
@@ -2,7 +2,7 @@ type: canvas
 display_name: Advanced AWS Cost Canvas
 defaults:
   comparison_mode: time
-  time_range: P1M
+  time_range: P30D
 
 rows:
   - items:
