--- a/viz_rill/dashboards/aws_overview.yaml
+++ b/viz_rill/dashboards/aws_overview.yaml
@@ -7,7 +7,7 @@ display_name: "AWS Cost Analytics"
 
 defaults:
   comparison_mode: time
-  time_range: P3M 
+  time_range: P30D
 
 rows:
   # ═══════════════════════════════════════════════════════════
