--- a/viz_rill/dashboards/gcp_product_insights.yaml
+++ b/viz_rill/dashboards/gcp_product_insights.yaml
@@ -5,7 +5,7 @@ type: canvas
 display_name: "GCP Product Deep Dive"
 
 defaults:
-  time_range: P3M
+  time_range: P30D
   comparison_mode: time
 
 rows:
