--- a/.dlt/secrets.toml.example
+++ b/.dlt/secrets.toml.example
@@ -17,6 +17,10 @@ token_uri = "https://oauth2.googleapis.com/token"
 [sources.stripe_analytics]
 stripe_secret_key = "sk_live_..."
 
+# MotherDuck token (get from app.motherduck.com → Settings → Access Tokens)
+[destination.motherduck.credentials]
+password = "eyJ..."  # Your MotherDuck service token
+
 # ClickHouse Cloud credentials (for production deployment)
 [destination.clickhouse.credentials]
 host = "xxxxx.europe-west4.gcp.clickhouse.cloud"
