--- a/viz_rill/.env.example
+++ b/viz_rill/.env.example
@@ -32,3 +32,12 @@ RILL_PROJECT_PATH=.
 # connector.clickhouse.dsn=clickhouse://username:password@host:port/database?secure=true
 # Example:
 # CONNECTOR_CLICKHOUSE_DSN=clickhouse://default:your-password@xxxxx.europe-west4.gcp.clickhouse.cloud:8443/default?secure=true
+
+## MotherDuck Configuration
+# Uncomment these to use MotherDuck instead of local parquet files
+
+# 1. Set connector to motherduck
+# RILL_CONNECTOR="motherduck"
+
+# 2. Add MotherDuck token (get from app.motherduck.com → Settings → Access Tokens)
+# CONNECTOR_MOTHERDUCK_TOKEN="eyJ..."
