--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "duckdb>=1.4.2",
     "jinja2>=3.1.6",
     "python-dotenv>=1.2.1",
-    #clickkouse
+    #clickhouse
     "dlt[clickhouse]",
     "clickhouse-connect>=0.10.0",
+    #motherduck
+    "dlt[motherduck]",
 ]
